# pyNNGP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
include/: SeqNNGP.h  covModel.h  noiseModel.h  tree.h  utils.h
notebook/: Demo.ipynb
pyNNGP/: SeqNNGP.py  __init__.py  _version.py  covModel.py  nngp.py
pysrc/: SeqNNGP.cpp  covModel.cpp  noiseModel.cpp  pyNNGP.cpp
src/: SeqNNGP.cpp  tree.cpp  utils.cpp
tests/: test_SeqNNGP.py  test_init.py
